<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/menu_item_set_goal"
        android:title="@string/menu_set_goal"
        app:showAsAction="never"
        android:orderInCategory="1"
        />

    <item
        android:id="@+id/menu_item_set_count"
        android:title="@string/menu_set_count"
        app:showAsAction="never"
        android:orderInCategory="2"
        />

    <item
        android:id="@+id/menu_item_change_button_type"
        android:title="@string/menu_change_type"
        app:showAsAction="never"
        android:orderInCategory="4"
        />

    <item
        android:id="@+id/menu_item_batch_click"
        android:title="@string/batch_click_short"
        app:showAsAction="ifRoom|withText"
        android:orderInCategory="3"
        />

    <item
        android:id="@+id/menu_item_location_icon"
        android:icon="@drawable/ic_location_off"
        android:title="@string/menu_location"
        app:showAsAction="ifRoom"
        android:orderInCategory="2"
        />
</menu>